--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Britlex</title>
 </head>
+
 <body>
-	
+	<!-- Hader============================= -->
+
+	<header class="header">
+		<div class="container">
+			<div class="header__top">
+				<div class="header__logo"><a href="#!"><img src="images/Britlex.svg" alt="Britlix" class="logo"></a></div>
+				<div class="header__block">
+					<nav class="header__nav">
+						<ul class="nav__list">
+							<li class="nav-item"><a href="#!" class="nav-link">Home</a></li>
+							<li class="nav-item"><a href="#!" class="nav-link">Skills</a></li>
+							<li class="nav-item"><a href="#!" class="nav-link">About us</a></li>
+							<li class="nav-item"><a href="#!" class="nav-link">Prices</a></li>
+							<li class="nav-item"><a href="#!" class="nav-link">Contacts</a></li>
+						</ul>
+					</nav>
+					<batton class="header__btn btn"><a href="#!">Let’s Talk</a></batton>
+				</div>
+			</div>
+		</div>
+	</header>
 </body>
+
 </html>
