--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/em_normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Britlex</title>
 </head>
@@ -21,19 +22,100 @@
 				<div class="header__logo"><a href="#!"><img src="images/Britlex.svg" alt="Britlix" class="logo"></a></div>
 				<div class="header__block">
 					<nav class="header__nav">
-						<ul class="nav__list">
-							<li class="nav-item"><a href="#!" class="nav-link">Home</a></li>
-							<li class="nav-item"><a href="#!" class="nav-link">Skills</a></li>
-							<li class="nav-item"><a href="#!" class="nav-link">About us</a></li>
-							<li class="nav-item"><a href="#!" class="nav-link">Prices</a></li>
-							<li class="nav-item"><a href="#!" class="nav-link">Contacts</a></li>
+						<ul class="header__list">
+							<li class="header__item"><a href="#!" class="header__link">Home</a></li>
+							<li class="header__item"><a href="#!" class="header__link">Skills</a></li>
+							<li class="header__item"><a href="#!" class="header__link">About us</a></li>
+							<li class="header__item"><a href="#!" class="header__link">Prices</a></li>
+							<li class="header__item"><a href="#!" class="header__link">Contacts</a></li>
 						</ul>
 					</nav>
 					<batton class="header__btn btn"><a href="#!">Let’s Talk</a></batton>
 				</div>
 			</div>
+			<div class="hero">
+				<div class="hero__descr">
+					<h1 class="title-h1 hero__title">Learn<br>Any Foreign Language</h1>
+
+					<p class="hero__text">With our teachers who write a&nbsp;program for
+						each student, you will be&nbsp;able to&nbsp;make your
+						first sketch after the first lesson.</p>
+					<button class="hero__btn btn"><a href=""> Get started</a></button>
+
+				</div>
+				<div class="hero__img"><img src="images/lending_bg.png" alt="" class="gtro-img"></div>
+
+			</div>
 		</div>
 	</header>
+	<!-- /Hader============================= -->
+
+	<main>
+
+		<!-- Skills============================= -->
+
+		<section class="skills">
+			<div class="container">
+				<h2 class="h2__title skills__title">Skills</h2>
+				<div class="skills__grid">
+					<div class="skills__item speaking">
+						<div class="skills__image"><img  src="/images/skills/speaking.png" alt="Speaking" class="speaking__img"></img></div>
+						<div class="skills__descr">
+							<h3 class="h3__title speaking__title">Speaking</h3>
+							<div class="skills__text speaking__text">
+								<p class="speaking__text-top">Improve your English skills and confidence. Live classes and
+									nteractive lessons online. 20% extra free for a&nbsp;limited time only
+								</p>
+								<p class="speaking__text-end">Learn English online and improve your skills through our
+									high-quality courses and resources&nbsp;&mdash; all designed for adult language learners.</p>
+							</div>
+							<button class="skills__btn speaking-btn">Learn more</button>
+						</div>
+					</div>
+					<div class="skills__item writing">
+						<div class="skills__image"><img src="images/skills/writing.png" alt="Writing" class="writing__img"></img></div>
+						<div class="skills__descr">
+							<h3 class="h3__title writing__title">Writing</h3>
+							<p class="skills__text writing__text">
+								One of&nbsp;the most important and extensive
+								areas of&nbsp;natural science, the science that
+								studies substances, also their composition
+							</p>
+							<button class="skills__btn writing-btn">Learn more</button>
+						</div>
+					</div>
+					<div class="skills__item reading">
+						<div class="skills__image"><img src="images/skills/reading.png" alt="Reading" class="reading__img"></img></div>
+						<div class="skills__descr">
+							<h3 class="h3__title reading__title">Reading</h3>
+							<p class="skills__text reading__text">
+								Perception and response actions of&nbsp;the user
+								resulting from the use and/or upcoming use
+								of&nbsp;the product, system or&nbsp;service
+							</p>
+							<button class="skills__btn reading-btn">Learn more</button>
+						</div>
+					</div>
+					<div class="skills__item listening">
+						<div class="skills__image"><img src="images/skills/listening.png" alt="Listening" class="listening__img"></img></div>
+						<div class="skills__descr listening__descr">
+							<h3 class="h3__title listening__title">Listening</h3>
+							<p class="skills__text listening__text">
+								Here you can find activities to&nbsp;practise
+								your listening skills. Listening will help you
+								to&nbsp;improve your understanding
+							</p>
+							<button class="skills__btn listening-btn">Learn more</button>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</section>
+
+		<!-- Skills============================= -->
+
+	</main>
 </body>
 
 </html>
